# WORLD-TEST

./: .gitignore  README.md
bot/: config.go  go.mod  main.go
client/: ._index.html  game.js  index.html  maps.js  script.js
client/classes/: hero.js  level.js  mover.js
go-server/: Dockerfile  go.mod  go.sum  main.go
go-server/src/: router.go
go-server/src/api/: handler.go
go-server/src/db/: config.go
go-server/src/world/: config.go  world.go
rust-server/: Cargo.toml  Dockerfile
rust-server/src/: config.rs  main.rs
server/: channel.go  client.go  config.go  go.mod  go.sum  main.go  struct.go
server-go/: main.go
server-go/src/server/api/: handler.go
server-go/src/test/: bot.go
server/src/server/: channel.go  config.go  router.go  world.go
server/src/server/api/: config.go
server/src/server/db/: mongo.go
server/src/server/world/: config.go  world.go
server/src/test/: config.go  dummy.go
