[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.4", features = ["ws", "headers"] }
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
tower-http = { version = "0.3.5", features = ["trace", "cors", "catch-panic"] }
futures = "0.3.26"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1"
mongodb = "2.3.1"
chrono = "0.4.23"
dotenv = "0.15.0"
data-encoding = "2.3.3"
md5 = "0.7.0"
uuid = "1.3.0"
rand = "0.8.5"